src/snapshots/ruff__linter__tests__E722_E722.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: DoNotUseBareExcept
  location:
    row: 4
    column: 0
  end_location:
    row: 6
    column: 7
  fix: ~
- kind: DoNotUseBareExcept
  location:
    row: 11
    column: 0
  end_location:
    row: 13
    column: 7
  fix: ~
- kind: DoNotUseBareExcept
  location:
    row: 16
    column: 0
  end_location:
    row: 18
    column: 7
  fix: ~

