src/snapshots/ruff__linter__tests__E731_E731.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: DoNotAssignLambda
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 19
  fix: ~
- kind: DoNotAssignLambda
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 19
  fix: ~
- kind: DoNotAssignLambda
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 29
  fix: ~

