src/snapshots/ruff__linter__tests__E742_E742.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    AmbiguousClassName: l
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 4
  fix: ~
- kind:
    AmbiguousClassName: I
  location:
    row: 5
    column: 0
  end_location:
    row: 6
    column: 4
  fix: ~
- kind:
    AmbiguousClassName: O
  location:
    row: 9
    column: 0
  end_location:
    row: 10
    column: 4
  fix: ~

