src/snapshots/ruff__linter__tests__E742_E742.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| class l:
|     pass
| 
| 
| class I:
|> Ambiguous class name: `l`
|     pass
| 
| 
| class O:
|> Ambiguous class name: `I`
|     pass
| 
| 
| class X:
|> Ambiguous class name: `O`
      pass

