src/snapshots/ruff__linter__tests__E743_E743.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    AmbiguousFunctionName: l
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 4
  fix: ~
- kind:
    AmbiguousFunctionName: I
  location:
    row: 5
    column: 0
  end_location:
    row: 6
    column: 4
  fix: ~
- kind:
    AmbiguousFunctionName: O
  location:
    row: 10
    column: 4
  end_location:
    row: 11
    column: 4
  fix: ~

