src/snapshots/ruff__linter__tests__E743_E743.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| def l():
|     pass
|> Ambiguous function name: `l`
  
  
| def I():
|     pass
|> Ambiguous function name: `I`
  
  
  class X:
|     def O(self):
|         pass
|> Ambiguous function name: `O`
  
  
  def x():
      pass

