src/snapshots/ruff__linter__tests__E999_E999.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    SyntaxError: Got unexpected EOF
  location:
    row: 2
    column: 0
  end_location:
    row: 1
    column: 8
  fix: ~

