src/snapshots/ruff__linter__tests__E999_E999.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  def x():
| 
|> SyntaxError: Got unexpected EOF

