src/snapshots/ruff__linter__tests__ERA001_ERA001.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: CommentedOutCode
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 10
  fix:
    patch:
      content: ""
      location:
        row: 1
        column: 0
      end_location:
        row: 2
        column: 0
- kind: CommentedOutCode
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 22
  fix:
    patch:
      content: ""
      location:
        row: 2
        column: 0
      end_location:
        row: 3
        column: 0
- kind: CommentedOutCode
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 6
  fix:
    patch:
      content: ""
      location:
        row: 3
        column: 0
      end_location:
        row: 4
        column: 0
- kind: CommentedOutCode
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 13
  fix:
    patch:
      content: ""
      location:
        row: 5
        column: 0
      end_location:
        row: 6
        column: 0
- kind: CommentedOutCode
  location:
    row: 12
    column: 4
  end_location:
    row: 12
    column: 16
  fix:
    patch:
      content: ""
      location:
        row: 12
        column: 0
      end_location:
        row: 13
        column: 0

